--- a/OmneFictio.Web/wwwroot/css/comment_section.css
+++ b/OmneFictio.Web/wwwroot/css/comment_section.css
@@ -372,13 +372,12 @@ a.reply_target:hover {
   cursor: pointer;
 }
 
-.modal-replies {
-  display: none;
+.modal-replies-cont {
+  align-items: center;
+}
+.modal-replies-cont .modal-replies {
+  display: flex;
   flex-direction: column;
-  position: fixed;
-  left: 50%;
-  top: 40%;
-  transform: translate(-50%, -40%);
   width: 98%;
   max-width: 500px;
   max-height: 90%;
@@ -386,28 +385,27 @@ a.reply_target:hover {
   box-shadow: 0px 0px 14px 4px var(--div-boxshadow1);
   border-radius: 20px 20px 10px 10px;
   font-family: "Itim", cursive;
-  z-index: 200;
   padding-bottom: 6px;
 }
-.modal-replies .mr-header {
+.modal-replies-cont .modal-replies .mr-header {
   border-bottom: 2px solid var(--background-color3);
   display: flex;
   flex-direction: row;
 }
-.modal-replies .mr-header span {
+.modal-replies-cont .modal-replies .mr-header span {
   display: flex;
   align-items: center;
   padding-left: 20px;
   font-size: 1.3rem;
   margin-right: auto;
 }
-.modal-replies .mr-header .mr-close {
+.modal-replies-cont .modal-replies .mr-header .mr-close {
   cursor: pointer;
   padding: 4px 12px 0px;
   font-size: 1.8rem;
   text-shadow: 0px 0px 6px var(--text-boxshadow1);
 }
-.modal-replies .mr-body {
+.modal-replies-cont .modal-replies .mr-body {
   display: flex;
   flex-direction: column;
   overflow-y: auto;
@@ -415,34 +413,34 @@ a.reply_target:hover {
   gap: 15px;
   padding-bottom: 10px;
 }
-.modal-replies .mr-body .mr-comment-cont {
+.modal-replies-cont .modal-replies .mr-body .mr-comment-cont {
   display: flex;
   flex-direction: column;
 }
-.modal-replies .mr-body .mr-replies-cont {
+.modal-replies-cont .modal-replies .mr-body .mr-replies-cont {
   display: flex;
   flex-direction: column;
   gap: 7px;
 }
-.modal-replies .mr-body .mr-comment {
+.modal-replies-cont .modal-replies .mr-body .mr-comment {
   display: flex;
   flex-direction: column;
   width: 100%;
   padding: 10px 6px 5px;
 }
-.modal-replies .mr-body .mr-comment .mrc-header {
+.modal-replies-cont .modal-replies .mr-body .mr-comment .mrc-header {
   display: flex;
   align-items: center;
   font-family: "Itim", cursive;
   flex-wrap: wrap;
 }
-.modal-replies .mr-body .mr-comment .mrc-header img {
+.modal-replies-cont .modal-replies .mr-body .mr-comment .mrc-header img {
   height: 1.7rem;
   width: 1.7rem;
   border-radius: 50%;
   cursor: pointer;
 }
-.modal-replies .mr-body .mr-comment .mrc-header .mrc-username {
+.modal-replies-cont .modal-replies .mr-body .mr-comment .mrc-header .mrc-username {
   font-size: 0.8rem;
   cursor: pointer;
   margin: 0 8px;
@@ -451,12 +449,12 @@ a.reply_target:hover {
   overflow: hidden;
   max-width: 180px;
 }
-.modal-replies .mr-body .mr-comment .mrc-header .mrc-date {
+.modal-replies-cont .modal-replies .mr-body .mr-comment .mrc-header .mrc-date {
   color: var(--text-color2);
   font-size: 0.7rem;
   font-family: "Gudea";
 }
-.modal-replies .mr-body .mr-comment .mrc-header .mrc-menu {
+.modal-replies-cont .modal-replies .mr-body .mr-comment .mrc-header .mrc-menu {
   margin-left: auto;
   display: flex;
   height: 100%;
@@ -464,37 +462,37 @@ a.reply_target:hover {
   font-size: 1.6rem;
   cursor: pointer;
 }
-.modal-replies .mr-body .mr-comment .mrc-header .mrc-menu i {
+.modal-replies-cont .modal-replies .mr-body .mr-comment .mrc-header .mrc-menu i {
   display: flex;
 }
-.modal-replies .mr-body .mr-comment .mrc-text {
+.modal-replies-cont .modal-replies .mr-body .mr-comment .mrc-text {
   margin: 10px 0;
   font-size: 0.9rem;
   font-family: "Gudea", sans-serif;
   line-height: 1rem;
 }
-.modal-replies .mr-body .mr-comment .mrc-text span {
+.modal-replies-cont .modal-replies .mr-body .mr-comment .mrc-text span {
   flex-grow: 1;
   display: -webkit-box;
   -webkit-line-clamp: 10;
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
-.modal-replies .mr-body .mr-comment .mrc-footer .mrc-evaluation {
+.modal-replies-cont .modal-replies .mr-body .mr-comment .mrc-footer .mrc-evaluation {
   display: flex;
   flex-direction: row;
   align-items: center;
   color: var(--text-color2);
 }
-.modal-replies .mr-body .mr-comment .mrc-footer .mrc-evaluation i {
+.modal-replies-cont .modal-replies .mr-body .mr-comment .mrc-footer .mrc-evaluation i {
   font-size: 1.2rem;
   cursor: pointer;
   transition: color 0.2s ease;
 }
-.modal-replies .mr-body .mr-comment .mrc-footer .mrc-evaluation .mrc-likes {
+.modal-replies-cont .modal-replies .mr-body .mr-comment .mrc-footer .mrc-evaluation .mrc-likes {
   padding: 0 8px;
 }
-.modal-replies .mr-body .mr-comment .mrc-footer .mrc-evaluation .mrc-replybtn {
+.modal-replies-cont .modal-replies .mr-body .mr-comment .mrc-footer .mrc-evaluation .mrc-replybtn {
   cursor: pointer;
   margin-left: 10px;
   font-family: "Josefin Sans", sans-serif;
@@ -502,29 +500,29 @@ a.reply_target:hover {
   padding: 2px 0 0;
   margin-bottom: -1px;
 }
-.modal-replies .mr-body .mr-comment .mrc-footer .mrc-evaluation .mrc-replybtn:hover {
+.modal-replies-cont .modal-replies .mr-body .mr-comment .mrc-footer .mrc-evaluation .mrc-replybtn:hover {
   text-decoration: underline;
 }
-.modal-replies .mr-body .mr-reply {
+.modal-replies-cont .modal-replies .mr-body .mr-reply {
   display: flex;
   flex-direction: column;
   width: 100%;
   background-color: var(--replies-bgcolor);
   padding: 6px 4px 3px;
 }
-.modal-replies .mr-body .mr-reply .mrr-header {
+.modal-replies-cont .modal-replies .mr-body .mr-reply .mrr-header {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
   margin-bottom: 5px;
 }
-.modal-replies .mr-body .mr-reply .mrr-header img {
+.modal-replies-cont .modal-replies .mr-body .mr-reply .mrr-header img {
   height: 1.3rem;
   width: 1.3rem;
   border-radius: 50%;
   cursor: pointer;
 }
-.modal-replies .mr-body .mr-reply .mrr-header .mrr-username {
+.modal-replies-cont .modal-replies .mr-body .mr-reply .mrr-header .mrr-username {
   font-size: 0.8rem;
   cursor: pointer;
   margin: 0 6px;
@@ -533,12 +531,12 @@ a.reply_target:hover {
   overflow: hidden;
   max-width: 180px;
 }
-.modal-replies .mr-body .mr-reply .mrr-header .mrr-date {
+.modal-replies-cont .modal-replies .mr-body .mr-reply .mrr-header .mrr-date {
   color: var(--text-color2);
   font-size: 0.7rem;
   font-family: "Gudea";
 }
-.modal-replies .mr-body .mr-reply .mrr-header .mrr-menu {
+.modal-replies-cont .modal-replies .mr-body .mr-reply .mrr-header .mrr-menu {
   margin-left: auto;
   display: flex;
   height: 100%;
@@ -546,44 +544,44 @@ a.reply_target:hover {
   font-size: 1.6rem;
   cursor: pointer;
 }
-.modal-replies .mr-body .mr-reply .mrr-header .mrr-menu i {
+.modal-replies-cont .modal-replies .mr-body .mr-reply .mrr-header .mrr-menu i {
   display: flex;
 }
-.modal-replies .mr-body .mr-reply .mrr-text {
+.modal-replies-cont .modal-replies .mr-body .mr-reply .mrr-text {
   margin-bottom: 6px;
   font-size: 0.9rem;
   font-family: "Gudea", sans-serif;
   line-height: 1rem;
 }
-.modal-replies .mr-body .mr-reply .mrr-text span {
+.modal-replies-cont .modal-replies .mr-body .mr-reply .mrr-text span {
   display: -webkit-box;
   -webkit-line-clamp: 10;
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
-.modal-replies .mr-body .mr-reply .mrr-footer {
+.modal-replies-cont .modal-replies .mr-body .mr-reply .mrr-footer {
   font-family: "Itim", cursive;
   display: flex;
   flex-flow: wrap;
   align-items: center;
 }
-.modal-replies .mr-body .mr-reply .mrr-footer .mrr-evaluation {
+.modal-replies-cont .modal-replies .mr-body .mr-reply .mrr-footer .mrr-evaluation {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   color: var(--text-color2);
 }
-.modal-replies .mr-body .mr-reply .mrr-footer .mrr-evaluation i {
+.modal-replies-cont .modal-replies .mr-body .mr-reply .mrr-footer .mrr-evaluation i {
   font-size: 1.1rem;
   cursor: pointer;
   transition: color 0.2s ease;
   display: flex;
 }
-.modal-replies .mr-body .mr-reply .mrr-footer .mrr-evaluation .mrr-likes {
+.modal-replies-cont .modal-replies .mr-body .mr-reply .mrr-footer .mrr-evaluation .mrr-likes {
   padding: 0 4px;
 }
-.modal-replies .mr-body .mr-reply .mrr-footer .mrr-evaluation .mrr-replybtn {
+.modal-replies-cont .modal-replies .mr-body .mr-reply .mrr-footer .mrr-evaluation .mrr-replybtn {
   cursor: pointer;
   margin-left: 8px;
   font-family: "Josefin Sans", sans-serif;
@@ -591,17 +589,17 @@ a.reply_target:hover {
   margin-bottom: -3px;
   font-size: 0.9rem;
 }
-.modal-replies .mr-body .mr-reply .mrr-footer .mrr-evaluation .mrr-replybtn:hover {
+.modal-replies-cont .modal-replies .mr-body .mr-reply .mrr-footer .mrr-evaluation .mrr-replybtn:hover {
   text-decoration: underline;
 }
-.modal-replies .mr-body .add_reply-cont {
+.modal-replies-cont .modal-replies .mr-body .add_reply-cont {
   display: flex;
   flex-direction: column;
   width: 100%;
   padding: 5px 6px 0;
   align-self: center;
 }
-.modal-replies .mr-body .add_reply-cont .replyfieldBody {
+.modal-replies-cont .modal-replies .mr-body .add_reply-cont .replyfieldBody {
   background-color: var(--background-color1);
   color: var(--text-color1);
   width: 100%;
@@ -616,7 +614,7 @@ a.reply_target:hover {
   overflow: auto;
   text-align: justify;
 }
-.modal-replies .mr-body .add_reply-cont .ar-footer {
+.modal-replies-cont .modal-replies .mr-body .add_reply-cont .ar-footer {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -624,12 +622,12 @@ a.reply_target:hover {
   padding: 0 6px;
   font-family: "Itim", cursive;
 }
-.modal-replies .mr-body .add_reply-cont .ar-footer .ar-user {
+.modal-replies-cont .modal-replies .mr-body .add_reply-cont .ar-footer .ar-user {
   display: flex;
   align-items: center;
   flex-shrink: 0;
 }
-.modal-replies .mr-body .add_reply-cont .ar-footer .ar-user .ar-username {
+.modal-replies-cont .modal-replies .mr-body .add_reply-cont .ar-footer .ar-user .ar-username {
   font-size: 0.8rem;
   cursor: pointer;
   padding: 0 8px;
@@ -638,16 +636,16 @@ a.reply_target:hover {
   overflow: hidden;
   max-width: 180px;
 }
-.modal-replies .mr-body .add_reply-cont .ar-footer .ar-user .ar-username:hover {
+.modal-replies-cont .modal-replies .mr-body .add_reply-cont .ar-footer .ar-user .ar-username:hover {
   text-decoration: underline;
 }
-.modal-replies .mr-body .add_reply-cont .ar-footer .ar-user img {
+.modal-replies-cont .modal-replies .mr-body .add_reply-cont .ar-footer .ar-user img {
   height: 1.4rem;
   width: 1.4rem;
   border-radius: 50%;
   cursor: pointer;
 }
-.modal-replies .mr-body .add_reply-cont .ar-footer .cancel_addreply-btn {
+.modal-replies-cont .modal-replies .mr-body .add_reply-cont .ar-footer .cancel_addreply-btn {
   font-size: 1.1rem;
   transition: font-size 0.1s ease;
   color: var(--text-color2);
@@ -655,35 +653,35 @@ a.reply_target:hover {
   margin-right: 20px;
   cursor: pointer;
 }
-.modal-replies .mr-body .add_reply-cont .ar-footer .cancel_addreply-btn:hover {
+.modal-replies-cont .modal-replies .mr-body .add_reply-cont .ar-footer .cancel_addreply-btn:hover {
   text-decoration: underline;
 }
-.modal-replies .mr-body .add_reply-cont .ar-footer .send_reply-btn {
+.modal-replies-cont .modal-replies .mr-body .add_reply-cont .ar-footer .send_reply-btn {
   font-size: 1.1rem;
   transition: font-size 0.1s ease;
   color: var(--text-color1);
   cursor: pointer;
 }
-.modal-replies .mr-body .add_reply-cont .ar-footer .send_reply-btn:hover {
+.modal-replies-cont .modal-replies .mr-body .add_reply-cont .ar-footer .send_reply-btn:hover {
   text-decoration: underline;
 }
 
 @media (min-width: 768px) {
-  .modal-replies {
+  .modal-replies-cont .modal-replies {
     max-width: 650px;
     max-height: 60%;
   }
-  .modal-replies .mr-comment .mrc-text {
+  .modal-replies-cont .modal-replies .mr-comment .mrc-text {
     padding: 0 10px;
     font-size: 0.9rem;
   }
-  .modal-replies .mr-body .mr-reply {
+  .modal-replies-cont .modal-replies .mr-body .mr-reply {
     padding: 6px 10px 3px;
     font-size: 0.9rem;
   }
 }
 @media (min-width: 992px) {
-  .modal-replies {
+  .modal-replies-cont .modal-replies {
     max-width: 900px;
   }
 }/*# sourceMappingURL=comment_section.css.map */
