--- a/OmneFictio.Web/wwwroot/css/post.css
+++ b/OmneFictio.Web/wwwroot/css/post.css
@@ -631,13 +631,12 @@ main {
   margin-left: 16px;
 }
 
-.modal-chapters {
-  display: none;
+.modal-chapters-cont {
+  align-items: center;
+}
+.modal-chapters-cont .modal-chapters {
+  display: flex;
   flex-direction: column;
-  position: fixed;
-  left: 50%;
-  top: 40%;
-  transform: translate(-50%, -40%);
   width: 92%;
   max-width: 500px;
   max-height: 90%;
@@ -645,47 +644,46 @@ main {
   box-shadow: 0px 0px 14px 4px var(--div-boxshadow1);
   border-radius: 20px 20px 10px 10px;
   font-family: "Itim", cursive;
-  z-index: 200;
   padding-bottom: 6px;
 }
-.modal-chapters .mc-header {
+.modal-chapters-cont .modal-chapters .mc-header {
   border-bottom: 2px solid var(--background-color3);
   display: flex;
   flex-direction: row;
 }
-.modal-chapters .mc-header span {
+.modal-chapters-cont .modal-chapters .mc-header span {
   display: flex;
   align-items: center;
   padding-left: 20px;
   font-size: 1.3rem;
   margin-right: auto;
 }
-.modal-chapters .mc-header .mc-close {
+.modal-chapters-cont .modal-chapters .mc-header .mc-close {
   cursor: pointer;
   padding: 4px 12px 0px;
   font-size: 1.8rem;
   text-shadow: 0px 0px 6px var(--text-boxshadow1);
 }
-.modal-chapters .mc-body {
+.modal-chapters-cont .modal-chapters .mc-body {
   overflow-y: auto;
   padding: 6px 0 10px;
 }
-.modal-chapters .mc-body ul {
+.modal-chapters-cont .modal-chapters .mc-body ul {
   flex-grow: 1;
 }
-.modal-chapters .mc-body ul > li {
+.modal-chapters-cont .modal-chapters .mc-body ul > li {
   width: 100%;
   overflow: hidden;
   cursor: pointer;
   border-bottom: 1px solid var(--background-color5);
 }
-.modal-chapters .mc-body ul > li > a {
+.modal-chapters-cont .modal-chapters .mc-body ul > li > a {
   padding: 6px 20px;
 }
-.modal-chapters .mc-body ul > li:hover {
+.modal-chapters-cont .modal-chapters .mc-body ul > li:hover {
   background-color: var(--background-color4);
 }
-.modal-chapters .mc-body ul > li:last-child {
+.modal-chapters-cont .modal-chapters .mc-body ul > li:last-child {
   border-bottom: unset;
 }
 
