--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -339,7 +339,7 @@
         </div>
     </template>
 
-    <div class="modal-replies-cont modalbg-base" id="modal-replies">
+    <div class="modal-replies-cont modalbg-base opacity1" id="modal-replies">
         <div class="modal-replies">
             <div class="mr-header">
                 <span>Replies</span>
