--- a/OmneFictio.Web/wwwroot/css/site.scss
+++ b/OmneFictio.Web/wwwroot/css/site.scss
@@ -85,12 +85,17 @@ select {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 504;
     width: 100%;
     height: 100%;
     background-color: #00000060;
     justify-content: center;
     align-items: flex-start;
+    z-index: 504;
+}
+
+.modalbg-base-2 {
+    @extend .modalbg-base;
+    z-index: 505 !important;
 }
 
 .modalbg1 {
@@ -800,148 +805,141 @@ header {
     }
 }
 
+.filter-tagdd-cont {
+    padding-top: 6%;
 
-.filter-tagdd {
-    display: none;
-    flex-direction: column;
-    position: fixed;
-    top: 12%;
-    margin-left: auto;
-    margin-right: auto;
-    left: 0;
-    right: 0;
-    height: 340px;
-    width: 240px;
-    border-radius: 20px;
-    overflow: hidden;
-    z-index: 507;
-    background-color: var(--modal-background);
-    box-shadow: 0px 0px 6px 0px var(--div-boxshadow1);
-    padding-bottom: 10px;
-    user-select: none;
-
-    .tagdd-header {
-        width: 100%;
-        flex-shrink: 0;
+    .filter-tagdd {
         display: flex;
-        flex-direction: row;
-        padding: 10px;
+        flex-direction: column;
+        height: 340px;
+        width: 240px;
+        border-radius: 20px;
+        overflow: hidden;
+        background-color: var(--modal-background);
+        box-shadow: 0px 0px 6px 0px var(--div-boxshadow1);
+        padding-bottom: 10px;
+        user-select: none;
 
-        .tagdd-searchbar {
-            padding: 2px 6px;
-            border: none;
-            outline: none;
-            border-radius: 4px;
+        .tagdd-header {
             width: 100%;
-            flex-shrink: 1;
-            border: 1px solid var(--text-color1);
-        }
-
-        >i {
-            margin: 0 4px 0 20px;
-            margin-right: 4px;
-            font-size: 1.3rem;
             flex-shrink: 0;
-            text-shadow: 0px 0px 6px var(--text-boxshadow1);
-            cursor: pointer;
+            display: flex;
+            flex-direction: row;
+            padding: 10px;
+
+            .tagdd-searchbar {
+                padding: 2px 6px;
+                border: none;
+                outline: none;
+                border-radius: 4px;
+                width: 100%;
+                flex-shrink: 1;
+                border: 1px solid var(--text-color1);
+            }
+
+            >i {
+                margin: 0 4px 0 20px;
+                margin-right: 4px;
+                font-size: 1.3rem;
+                flex-shrink: 0;
+                text-shadow: 0px 0px 6px var(--text-boxshadow1);
+                cursor: pointer;
+            }
         }
-    }
 
-    >ul {
-        flex-grow: 1;
-        overflow-y: auto;
+        >ul {
+            flex-grow: 1;
+            overflow-y: auto;
 
-        >li {
-            width: 100%;
-            padding: 6px 20px;
-            overflow: hidden;
-            cursor: pointer;
+            >li {
+                width: 100%;
+                padding: 6px 20px;
+                overflow: hidden;
+                cursor: pointer;
 
-            &:hover {
-                background-color: var(--modal-item-hover);
+                &:hover {
+                    background-color: var(--modal-item-hover);
+                }
             }
         }
     }
 }
 
-.filter-addseries {
-    display: none;
-    flex-direction: column;
-    position: fixed;
-    top: 12%;
-    margin-left: auto;
-    margin-right: auto;
-    left: 0;
-    right: 0;
-    height: 400px;
-    width: 260px;
-    border-radius: 20px;
-    overflow: hidden;
-    z-index: 508;
-    background-color: var(--modal-background);
-    box-shadow: 0px 0px 6px 0px var(--div-boxshadow1);
-    padding-bottom: 10px;
-    user-select: none;
+.filter-addseries-cont {
+    padding-top: 6%;
 
-    .fadds-header {
-        width: 100%;
-        flex-shrink: 0;
+    .filter-addseries {
         display: flex;
-        flex-direction: row;
-        padding: 10px;
+        flex-direction: column;
+        height: 400px;
+        width: 260px;
+        border-radius: 20px;
+        overflow: hidden;
+        background-color: var(--modal-background);
+        box-shadow: 0px 0px 6px 0px var(--div-boxshadow1);
+        padding-bottom: 10px;
+        user-select: none;
 
-        .fadds-searchbar {
-            padding: 2px 6px;
-            border: none;
-            outline: none;
-            border-radius: 4px;
+        .fadds-header {
             width: 100%;
-            flex-shrink: 1;
-            border: 1px solid var(--text-color1);
-        }
-
-        >i {
-            margin: 0 4px 0 20px;
-            margin-right: 4px;
-            font-size: 1.3rem;
             flex-shrink: 0;
-            text-shadow: 0px 0px 6px var(--text-boxshadow1);
-            cursor: pointer;
+            display: flex;
+            flex-direction: row;
+            padding: 10px;
+
+            .fadds-searchbar {
+                padding: 2px 6px;
+                border: none;
+                outline: none;
+                border-radius: 4px;
+                width: 100%;
+                flex-shrink: 1;
+                border: 1px solid var(--text-color1);
+            }
+
+            >i {
+                margin: 0 4px 0 20px;
+                margin-right: 4px;
+                font-size: 1.3rem;
+                flex-shrink: 0;
+                text-shadow: 0px 0px 6px var(--text-boxshadow1);
+                cursor: pointer;
+            }
         }
-    }
 
-    .fadds-dropdowns {
-        padding: 4px;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        flex-wrap: wrap;
-        padding: 0 10px 6px;
-
-        >select {
-            outline: none;
-            border: none;
-            background: var(--background-color5);
-            color: var(--text-color1);
+        .fadds-dropdowns {
             padding: 4px;
-            border-radius: 5px;
-            font-size: 1.1rem;
-            cursor: pointer;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            flex-wrap: wrap;
+            padding: 0 10px 6px;
+
+            >select {
+                outline: none;
+                border: none;
+                background: var(--background-color5);
+                color: var(--text-color1);
+                padding: 4px;
+                border-radius: 5px;
+                font-size: 1.1rem;
+                cursor: pointer;
+            }
         }
-    }
 
-    .fadds-list {
-        flex-grow: 1;
-        overflow-y: auto;
+        .fadds-list {
+            flex-grow: 1;
+            overflow-y: auto;
 
-        >li {
-            width: 100%;
-            padding: 6px 20px;
-            overflow: hidden;
-            cursor: pointer;
+            >li {
+                width: 100%;
+                padding: 6px 20px;
+                overflow: hidden;
+                cursor: pointer;
 
-            &:hover {
-                background-color: var(--modal-item-hover);
+                &:hover {
+                    background-color: var(--modal-item-hover);
+                }
             }
         }
     }
@@ -1347,6 +1345,7 @@ footer {
     .filter-box,
     .theme-switcher {
         width: 100% !important;
+        //Gives full width when modals are too small
     }
 }
 
