--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -503,7 +503,7 @@
                 <div class="shortcuts-cont">
                     <i class="bi bi-search search-shortcut"></i>
                     <i class="bi bi-chat-dots chat-shortcut"></i>
-                    <a href="/Publish"><i class="bi bi-plus-circle"></i></a>
+                    <a href="/Create"><i class="bi bi-plus-circle"></i></a>
                     <i class="bi bi-bell notifications-shortcut"></i>
                 </div>
                 <div class="account-cont">
